# MUSK

./: .gitignore  Cargo.toml  README.md  compile.sh
example/: musk-build.sh  musk-classify.sh
example/reference/: accession2taxid
example/reference/sequences/: GCF_028743535.1_ASM2874353v1_genomic.fna  GCF_028743575.1_ASM2874357v1_genomic.fna  GCF_028743615.1_ASM2874361v1_genomic.fna  GCF_030770375.1_ASM3077037v1_genomic.fna
example/test_reads/: reads.fastq
src/: accession_tree.rs  big_exp_float.rs  binomial.rs  binomial_sf.rs  bit_vectors.rs  constants.rs  consts.rs  database.rs  decode.rs  explore.rs  generator.rs  hit_counter.rs  intersect.rs  intervals.rs  io.rs  kmer_iter.rs  kmer_vec.rs  lib.rs  my_float.rs  order.rs  rle.rs  sequences.rs  sorted_vector_sets.rs  sorted_vector_utilities.rs  taxonomy.rs  tests.rs  tracing.rs  utility.rs
tests/: kmer_iter.rs  kmer_iter_test.rs  rle.rs
