[package]
name = "musk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "*"
tracing-subscriber = { version = "*", features = ["std", "env-filter"] }

bio = "*"
statrs = "*"
clap = { version = "*", features = ["derive"] }
bincode = "*"
serde = {version = "*", features = ["derive"]}
num-traits = "*"
rand = "*"
bit-iter = "*"
approx = "*"
taxonomy = "*"
roaring = { version = "*", features = ["serde"]}
threadpool = "*"
pq-tree = "*"
itertools = "*"
rayon = "*"
indicatif = {version = "*", features = ["rayon"]} 
concorde_rs = "*"
