[package]
name = "musk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "*"
bincode = "*"
bio = "*"
bit-iter = "*"
clap = { version = "*", features = ["derive"] }
indicatif = {version = "*", features = ["rayon"]} 
itertools = "*"
num-traits = "*"
rand = "*"
rayon = "*"
roaring = { version = "*", features = ["serde"]}
serde = {version = "*", features = ["derive"]}
statrs = "*"
taxonomy = "*"
threadpool = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["std", "env-filter"] }
